# principia-diagnostics

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  USER_GUIDE.md  pyproject.toml  setup.sh
.github/workflows/: tests.yml
data/: ds_wiki.db
data/reports/examples/: tier1_report_e_coli.html  tier2_report_ecoli.html
data/rrp/ccbh/: ccbh_cluster_raw.json  rrp_ccbh_cluster.db
data/rrp/ecoli_core/: rrp_ecoli_core.db
data/rrp/opera/: rrp_opera_paper.db
data/rrp/universal_paralogs/: rrp_universal_paralogs.db
docs/: ARCHITECTURE_DECISIONS.md  FISHER_PIPELINE_REDESIGN.md
scripts/: run_entity_catalog_pass.py  run_fisher_suite.py  run_structural_alignment.py
src/: cli.py  config.py  embedder.py  extractor.py  sync.py  topology.py
src/analysis/: __init__.py  claim_extractor.py  coverage_analyzer.py  domain_boundaries.py  fisher_bridge_filter.py  fisher_diagnostics.py  fisher_report.py  gap_analyzer.py  hypothesis_generator.py  link_classifier.py  result_validator.py  structural_alignment.py
src/ingestion/: cross_universe_query.py  detector.py  rrp_bundle.py
src/ingestion/parsers/: ccbh_cluster_parser.py  ecoli_core_parser.py  ieee_power_grid_parser.py  opera_paper_parser.py  opera_parser.py  pdf_parser.py  periodic_table_parser.py  zoo_classes_parser.py
src/ingestion/passes/: entity_catalog_pass.py
src/viz/: __init__.py  bridge_network.py  domain_heatmap.py  similarity_hist.py  tier1_dashboard.py  tier1_report.py  tier2_report.py  viz_runner.py
src/web/: app.py
src/web/templates/: index.html
tests/: test_claim_extractor.py  test_coverage_analyzer.py  test_cross_encoder_rerank.py  test_domain_boundaries.py  test_ecoli_parser.py  test_fisher_diagnostics.py  test_formality_scoring.py  test_gap_analyzer.py  test_hypothesis_generator.py  test_integration.py  test_pdf_parser.py  test_result_validator.py
