[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "principia-diagnostics"
version = "0.3.0"
description = "Graph coherence engine for research datasets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Ian Darling"}]
keywords = ["research", "diagnostics", "graph", "coherence", "fisher-information"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "numpy>=2.0.0",
    "plotly>=5.0.0",
    "matplotlib>=3.8.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
power = ["pandapower>=2.14.0"]
dev = [
    "principia-diagnostics[power]",
    "pytest>=9.0.0",
]

[project.scripts]
pfd = "cli:main"

[project.urls]
Homepage = "https://github.com/IanD25/principia-diagnostics"
Issues = "https://github.com/IanD25/principia-diagnostics/issues"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
